force-app/main/default/objects/Address_Location__c/Address_Location__c.object-meta.xml
<CustomObject>
    <label>Address Location</label>
    <nameField>
        <displayFormat>ALN-{00000}</displayFormat>
        <label>Address Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Address Locations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>