force-app/main/default/objects/Address_Location__c/fields/Additional_Campus__c.field-meta.xml
<CustomField>
    <fullName>Additional_Campus__c</fullName>
    <label>Campus Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>