force-app/main/default/objects/Address_Location__c/fields/Address_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Address_Effective_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Address Effective Date</label>
    <type>Date</type>
</CustomField>