force-app/main/default/objects/Address_Location__c/fields/Address_Ineffective_Date__c.field-meta.xml
<CustomField>
    <fullName>Address_Ineffective_Date__c</fullName>
    <label>Address Ineffective Date</label>
    <type>Date</type>
</CustomField>