force-app/main/default/objects/Address_Location__c/fields/Address_String__c.field-meta.xml
<CustomField>
    <fullName>Address_String__c</fullName>
    <formula>Address__r.Street_Number_1__c +&apos;, &apos;+ Address__r.Street__c +&apos;, &apos;+ TEXT(Address__r.Street_Type_Description__c) +&apos;, &apos;+ Address__r.City__c +&apos;, &apos;+  TEXT(Address__r.State_Province__c)  + &apos;, &apos;+ Address__r.Zip_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address String</label>
    <type>Text</type>
</CustomField>