force-app/main/default/objects/Address_Location__c/fields/Allotment__c.field-meta.xml
<CustomField>
    <fullName>Allotment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allotment</label>
    <referenceTo>Allotment__c</referenceTo>
    <relationshipLabel>Address Locations</relationshipLabel>
    <relationshipName>Address_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>