force-app/main/default/objects/Address_Location__c/fields/CareSubType__c.field-meta.xml
<CustomField>
    <fullName>CareSubType__c</fullName>
    <formula>Text(Service__r.Service_Care_Sub_Type__c)</formula>
    <label>Care Sub Type</label>
    <type>Text</type>
</CustomField>