force-app/main/default/objects/Address_Location__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Address Locations</relationshipLabel>
    <relationshipName>Address_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>