force-app/main/default/objects/Address_Location__c/fields/ContactsFullName__c.field-meta.xml
<CustomField>
    <fullName>ContactsFullName__c</fullName>
    <formula>IF(Contact__r.MiddleName != null , Contact__r.FirstName +&apos; &apos;+  Contact__r.MiddleName +&apos; &apos;+  Contact__r.LastName, Contact__r.FirstName +&apos; &apos;+ Contact__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contacts Full Name</label>
    <type>Text</type>
</CustomField>