force-app/main/default/objects/Address_Location__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Address Locations</relationshipLabel>
    <relationshipName>Address_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>