force-app/main/default/objects/Address_Location__c/fields/Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Integration_ID__c</fullName>
    <formula>IF(ISBLANK(Oracle_ID__c), Name , &apos;ALN-&apos;+TEXT(Oracle_ID__c))</formula>
    <label>Integration ID</label>
    <type>Text</type>
</CustomField>