force-app/main/default/objects/Address_Location__c/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Campus</fullName>
            </value>
            <value>
                <fullName>Innovative Pool Secondary Site</fullName>
            </value>
            <value>
                <fullName>Multi-Purpose Secondary Site</fullName>
            </value>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Postal</fullName>
            </value>
            <value>
                <fullName>Registered Business Address</fullName>
            </value>
            <value>
                <fullName>Residential Address</fullName>
            </value>
            <value>
                <fullName>Administrator/Liquidator Company Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>