force-app/main/default/objects/Address_Location__c/fields/RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName__c</fullName>
    <formula>RecordType.Name</formula>
    <label>RecordType Name</label>
    <type>Text</type>
</CustomField>