force-app/main/default/objects/Address_Location__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipName>Service_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>