force-app/main/default/objects/Address_Location__c/fields/Service_Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Integration_ID__c</fullName>
    <description>Formula Field to display the related services Integration ID for use in salesforce Maps</description>
    <formula>Service__r.Integration_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Integration ID</label>
    <type>Text</type>
</CustomField>