force-app/main/default/objects/Address_Location__c/recordTypes/AccountAddress.recordType-meta.xml
<RecordType>
    <fullName>AccountAddress</fullName>
    <active>true</active>
    <label>Account Address</label>
</RecordType>