force-app/main/default/objects/Address_Location__c/recordTypes/Additional_Campus.recordType-meta.xml
<RecordType>
    <fullName>Additional_Campus</fullName>
    <active>false</active>
    <label>Additional Campus</label>
</RecordType>