force-app/main/default/objects/Address_Location__c/recordTypes/Alternate.recordType-meta.xml
<RecordType>
    <fullName>Alternate</fullName>
    <active>false</active>
    <label>Alternate</label>
</RecordType>