force-app/main/default/objects/Address_Location__c/recordTypes/ContactAddress.recordType-meta.xml
<RecordType>
    <fullName>ContactAddress</fullName>
    <active>true</active>
    <label>Contact Address</label>
</RecordType>