force-app/main/default/objects/Address_Location__c/recordTypes/Innovative_Pool_Secondary_Site.recordType-meta.xml
<RecordType>
    <fullName>Innovative_Pool_Secondary_Site</fullName>
    <active>false</active>
    <label>Innovative Pool Secondary Site</label>
</RecordType>