force-app/main/default/objects/Address_Location__c/recordTypes/Multi_Purpose_Secondary_Site.recordType-meta.xml
<RecordType>
    <fullName>Multi_Purpose_Secondary_Site</fullName>
    <active>false</active>
    <label>Multi-Purpose Secondary Site</label>
</RecordType>