force-app/main/default/objects/Address_Location__c/recordTypes/Physical.recordType-meta.xml
<RecordType>
    <fullName>Physical</fullName>
    <active>false</active>
    <label>Physical (dont use)</label>
</RecordType>