force-app/main/default/objects/Address_Location__c/recordTypes/Postal.recordType-meta.xml
<RecordType>
    <fullName>Postal</fullName>
    <active>false</active>
    <label>Postal</label>
</RecordType>