force-app/main/default/objects/Address_Location__c/recordTypes/ServiceAddress.recordType-meta.xml
<RecordType>
    <fullName>ServiceAddress</fullName>
    <active>true</active>
    <label>Service Address</label>
</RecordType>