force-app/main/default/objects/Address_Location__c/validationRules/Perm_AL_ACO_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Perm_AL_ACO_Access</fullName>
    <active>true</active>
    <description>ACO record access</description>
    <errorConditionFormula>AND(
	OR(ISNEW(),NOT(ISNEW())),
	AND(
		Account__r.RecordType.DeveloperName = &apos;Aged_Care_Organisation&apos;,
		NOT(
			OR(
				$Permission.GPMS_System_Administrator,
				$Permission.GPMS_CHSP,
				$Permission.GPMS_NATSIFAC,
				$Permission.GPMS_ACQSC_User,
				$Permission.System_Administrator
			)
		)
	)
)</errorConditionFormula>
    <errorMessage>You do not have access to edit this record</errorMessage>
</ValidationRule>