force-app/main/default/objects/Address_Location__c/validationRules/Perm_AL_AP_Account_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Perm_AL_AP_Account_Access</fullName>
    <active>true</active>
    <description>Approved Provider Account record access</description>
    <errorConditionFormula>AND(
	OR(ISNEW(),NOT(ISNEW())),
	AND(
		Account__r.RecordType.DeveloperName = &apos;Approved_Provider&apos;,
		NOT(
			OR(
				$Permission.GPMS_System_Administrator,
				$Permission.GPMS_ACQSC_User,
				$Permission.GPMS_Central_Office_Staff,
				$Permission.System_Administrator
			)
		)
	)
)</errorConditionFormula>
    <errorMessage>You do not have access to edit this record</errorMessage>
</ValidationRule>