force-app/main/default/objects/Address_Location__c/validationRules/Perm_AL_CHSP_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Perm_AL_CHSP_Access</fullName>
    <active>true</active>
    <description>CHSP record access</description>
    <errorConditionFormula>AND(
	OR(ISNEW(),NOT(ISNEW())),
	AND(
		OR(
			Service__r.RecordType.DeveloperName = &apos;CHSP_Service&apos;,
			Account__r.RecordType.DeveloperName = &apos;Commonwealth_Home_Support_Programme&apos;
		),
		NOT(
			OR(
				$Permission.GPMS_System_Administrator,
				$Permission.GPMS_CHSP,
                $Permission.GPMS_Central_Office_Staff,
				$Permission.System_Administrator
			)
		)
	)
)</errorConditionFormula>
    <errorMessage>You do not have access to edit this record</errorMessage>
</ValidationRule>