force-app/main/default/objects/Address_Location__c/validationRules/Perm_AL_NATSIFAC_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Perm_AL_NATSIFAC_Access</fullName>
    <active>true</active>
    <description>NATSIFAC record access</description>
    <errorConditionFormula>AND(
	OR(ISNEW(),NOT(ISNEW())),
	AND(
		OR(
			Service__r.RecordType.DeveloperName = &apos;NATSIFAC_Service&apos;,
			Account__r.RecordType.DeveloperName = &apos;National_Aboriginal_and_Torres_Strait_Islander_Flexible_Aged_Care&apos;
		),
		NOT(
			OR(
				$Permission.GPMS_System_Administrator,
				$Permission.GPMS_NATSIFAC,
				$Permission.GPMS_Central_Office_Staff,
				$Permission.System_Administrator
			)
		)
	)
)</errorConditionFormula>
    <errorMessage>You do not have access to edit this record</errorMessage>
</ValidationRule>