force-app/main/default/objects/Address_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Care_Type__c</columns>
    <columns>Service_Name__c</columns>
    <columns>Address_String__c</columns>
    <columns>Location_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>